<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="56dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3">

        <ImageView
            android:id="@+id/fac_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/photo_zw" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fac_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="left"
            android:text="@string/fac"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/fac_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/tel"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/fac_addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/fac_addr"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/yuyue_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_corner_login"
            android:gravity="center"
            android:text="@string/btn_yuyue"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
