<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mit.ams.fragment.ChangePwdFragment">

    <EditText
        android:id="@+id/ori_pwd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:drawableLeft="@drawable/icon01"
        android:hint="@string/login_ori_pwd"
        android:inputType="textPassword"
        android:maxLength="18"
        android:maxLines="1"
        android:textSize="15dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/diver" />

    <EditText
        android:id="@+id/new_pwd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:drawableLeft="@drawable/icon02"
        android:hint="@string/login_new_pwd"
        android:inputType="textPassword"
        android:maxLength="18"
        android:maxLines="1"
        android:textSize="15dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/diver" />

    <EditText
        android:id="@+id/renew_pwd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:drawableLeft="@drawable/icon03"
        android:hint="@string/login_renew_pwd"
        android:inputType="textPassword"
        android:maxLength="18"
        android:maxLines="1"
        android:textSize="15dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/diver" />


    <Button
        android:id="@+id/sure_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_corner_login"
        android:text="@string/sure"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold" />
    />

</LinearLayout>
