<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mit.ams.fragment.FindPwdFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_tel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawableLeft="@drawable/tel"
            android:gravity="center_vertical"
            android:hint="@string/login_tel"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:textSize="15dp" />

        <Button
            android:id="@+id/get_vali"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="right|center_vertical|center_horizontal"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_view_border"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="获取验证码"
            android:textColor="#F68944" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/diver" />

    <EditText
        android:id="@+id/vali"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:drawableLeft="@drawable/vali"
        android:hint="@string/vali"
        android:inputType="number"
        android:maxLength="11"
        android:maxLines="1"
        android:textSize="15dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/diver" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_corner_login"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold" />

    <!--  空白，防止底部菜单栏遮挡 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp" />

    </LinearLayout>

</LinearLayout>
